# learn_opengl_rs

./: .gitignore  Cargo.toml  README.md  build.rs  justfile
src/: camera.rs  lib.rs  main.rs  mesh.rs  model.rs  resources.rs  shader.rs  texture.rs  window.rs
src/_1_getting_started/: _1_1_hello_window.rs  _1_2_hello_window_clear.rs  _2_1_hello_triangle.rs  _2_2_hello_triangle_indexed.rs  _2_3_hello_triangle_exercise_1.rs  _2_4_hello_triangle_exercise_2.rs  _2_5_hello_triangle_exercise_3.rs  _3_1_shaders_uniform.rs  _3_2_shaders_interpolation.rs  _3_3_shaders_class.rs  _3_4_shaders_exercise_1.rs  _3_5_shaders_exercise_2.rs  _3_6_shaders_exercise_3.rs  _4_1_textures.rs  _4_2_textures_combined.rs  _4_3_textures_exercise_1.rs  _4_4_textures_exercise_2.rs  _4_5_textures_exercise_3.rs  _4_6_textures_exercise_4.rs  _5_1_transformations.rs  _5_2_transformations_exercise_1.rs  _5_3_transformations_exercise_2.rs  _6_1_coordinate_systems.rs  _6_2_coordinate_systems_depth.rs  _6_3_coordinate_systems_multiple.rs  _6_4_coordinate_systems_exercise.rs  _7_1_camera_circle.rs  _7_2_camera_keyboard_dt.rs  _7_3_camera_mouse_zoom.rs  _7_4_camera_class.rs  _7_5_camera_exercise_1.rs  _7_6_camera_exercise_2.rs  mod.rs
src/_1_getting_started/shaders/: 3.5.shader.vs  3.6.shader.vs  4.1.texture.fs  4.2.texture.fs  4.3.texture.fs  4.6.texture.fs
src/_2_lighting/: _1_1_colors.rs  _2_1_basic_lighting_diffuse.rs  _2_2_basic_lighting_specular.rs  _2_3_basic_lighting_exercise_1.rs  _2_4_basic_lighting_exercise_2.rs  _2_5_basic_lighting_exercise_3.rs  _3_1_materials.rs  _3_2_materials_exercise_1.rs  _4_1_lighting_maps_diffuse_map.rs  _4_2_lighting_maps_specular_map.rs  _4_3_lighting_maps_exercise_2.rs  _4_4_lighting_maps_exercise_3.rs  _4_5_lighting_maps_exercise_4.rs  _5_1_light_casters_directional.rs  _5_2_light_casters_point.rs  _5_3_light_casters_spot.rs  _5_4_light_casters_spot_soft.rs  _6_1_multiple_lights.rs  _6_2_multiple_lights_exercise_1.rs  mod.rs
src/_2_lighting/shaders/: 2.1.basic_lighting.fs  2.1.basic_lighting.vs  2.2.basic_lighting.fs  2.2.basic_lighting.vs  2.4.basic_lighting.fs  2.4.basic_lighting.vs  2.5.basic_lighting.vs  3.1.materials.fs  3.1.materials.vs  4.1.lighting_maps.fs  4.2.lighting_maps.fs  4.3.lighting_maps.fs  4.5.lighting_maps.fs  5.1.light_casters.fs  5.2.light_casters.fs  5.3.light_casters.fs  5.4.light_casters.fs  (+1 more)
src/_3_model_loading/: _1_1_model_loading.rs  mod.rs
src/_4_advanced_opengl/: _10_1_instancing_quads.rs  _10_2_asteroids.rs  _10_3_asteroids_instanced.rs  _11_1_anti_aliasing_msaa.rs  _1_1_depth_testing.rs  _1_2_depth_testing_view.rs  _2_1_stencil_testing.rs  _3_1_blending_discard.rs  _3_2_blending_sort.rs  _4_1_face_culling_exercise_1.rs  _5_1_framebuffers.rs  _5_2_framebuffers_effects.rs  _5_3_framebuffers_exercise_1.rs  _6_1_cubemaps_skybox.rs  _6_2_cubemaps_environment_mapping.rs  _8_1_advanced_glsl_ubo.rs  _9_1_geometry_shader_houses.rs  _9_2_geometry_shader_exploding.rs  _9_3_geometry_shader_normals.rs  mod.rs
src/_5_advanced_lighting/: _1_1_advanced_lighting.rs  _2_1_gamma_correction.rs  _3_1_shadow_mapping_depth.rs  _3_2_shadow_mapping_base.rs  _3_3_shadow_mapping.rs  mod.rs
src/_9_testbed/: _1_1_egui.rs  mod.rs
web/: index.html
(+25 files in other folders)
