[package]
name = "learn_opengl_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
glow = "0.13"

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
glutin = { version = "0.31", optional = true }
glutin-winit = { version = "0.4", optional = true }
winit = { version = "0.29", features = ["rwh_05"], optional = true }
raw-window-handle = { version = "0.5", optional = true }
sdl2 = { version = "0.36", features = ["bundled"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "WebGl2RenderingContext", "Window"] }
wasm-bindgen = { version = "0.2" }

[features]
default = ["glutin_winit"]
glutin_winit = ["glutin", "glutin-winit", "winit", "raw-window-handle"]
