[package]
name = "learn_opengl_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib_learn_opengl_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
glow = "0.13"
cfg-if = "1"
log = "0.4"
typed-builder = "0.18"
bytemuck = { version = "1.15", features = ["derive"] }
chrono = "0.4"
image = "0.25"
nalgebra-glm = { version = "0.18", features = ["convert-bytemuck"] }
winit = { version = "0.29", features = ["rwh_05"] }
winit_input_helper = "0.16"
game-loop = { version = "1.1", features = ["winit"] }
anyhow = "1"
tobj = "4"
russimp = "3.2"

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
glutin = "0.31"
glutin-winit = "0.4"
raw-window-handle = "0.5"
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "WebGl2RenderingContext", "Window"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"
console_log = "1.0"
